# Proyecto-de-Software-2022

./: README.md
admin/: README.md  app.py  pyproject.toml
admin/public/css/: carnet.css  comprobante.css  error.css  form_alta.css  index.css  informacion_cuota.css  land_page.css  modal.css  navbar.css  style.css  style_export_carnet.css  style_export_comprobante.css
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  models.py  schemas.py
admin/src/core/business/: __init__.py  models.py  schemas.py
admin/src/core/config/: __init__.py  models.py  schemas.py
admin/src/core/fees/: __init__.py  models.py  schemas.py
admin/src/core/image/: __init__.py  models.py  schemas.py
admin/src/core/roles/: __init__.py  models.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: admin.py  auth.py  cuotas.py  disciplinas.py  exporter.py  forms.py  socios.py  user.py
admin/src/web/controllers/api/: auth.py  club.py  socios.py
admin/src/web/helpers/: adaptators.py  auth.py  choices_loader.py  formatters.py  handlers.py  pagination.py  roles.py  validators.py
admin/src/web/templates/: base.html  error.html  land_page.html  macros.html  navbar.html  paginacion.html
admin/src/web/templates/admin/: config.html  profile.html
admin/src/web/templates/business/: alta_categoria.html  alta_disciplinas.html  alta_instructor.html  confirmar_inscripcion.html  disciplinas.html  editar_disciplina.html  search.html  (+1 more)
admin/tests/: conftest.py
admin/tests/unit/: test_discipline.py  test_settings.py  test_socio.py  test_user.py
(+57 files in other folders)
