[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Facundo Miglierini <facundomiglierini@hotmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-WTF = "^1.0.1"
email-validator = "^1.3.0"
Flask-Session = "^0.4.0"
marshmallow-sqlalchemy = "^0.28.1"
flask-marshmallow = "^0.14.0"
reportlab = "^3.6.11"
requests = "^2.28.1"
wkhtmltopdf = "^0.2"
pandas = "^1.5.1"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"
pdfkit = "^1.0.0"
Babel = "^2.10.3"
SQLAlchemy = "^1.4.42"
Flask-JWT-Extended = "^4.4.4"
Flask-Cors = "^3.0.10"
qrcode = {extras = ["pil"], version = "^7.3.1"}
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
